kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eck-ui
  labels:
    name: eck-ui
    app: eck-ui
