kubernetes/03-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eck-ui-backend
  namespace: eck-ui
  labels:
    app: eck-ui
    component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app: eck-ui
    component: backend
